examples/invalid/types/nonconstparam.mcl

void f(const int x) {
    int y = x;
}

void main() {
    int z = 5;
    f(z);
}